fix: tests with table header label visibility

--- a/src/components/reusable/loaders/skeleton.scss
+++ b/src/components/reusable/loaders/skeleton.scss
@@ -58,7 +58,7 @@
 
 :host([size="table-cell"]) {
   height: 12px;
-  min-width: 100px;
+  min-width: 115px;
   width: 95%;
 }
 
